packages/svelte/tests/compiler-errors/samples/unexpected-end-of-input-d/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'block_unclosed',
		message: 'Block was left open',
		position: [0, 1]
	}
});
